--- a/receipts.html
+++ b/receipts.html
@@ -18,6 +18,7 @@
 
     <main>
         <h2>All Receipts</h2>
+        <p>No receipts available yet. Check back later!</p>
         <table>
             <thead>
                 <tr>
@@ -29,18 +30,11 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>2024-01-15</td>
-                    <td>Purchase of office supplies</td>
-                    <td>$500.00</td>
-                    <td><a href="receipts/receipt-001.pdf" download>Download</a></td>
+                    <td>Placeholder Date</td>
+                    <td>Placeholder Description</td>
+                    <td>$0.00</td>
+                    <td><a href="#">No Receipt Available</a></td>
                 </tr>
-                <tr>
-                    <td>2024-01-20</td>
-                    <td>Charity donation to XYZ</td>
-                    <td>$1,200.00</td>
-                    <td><a href="receipts/receipt-002.pdf" download>Download</a></td>
-                </tr>
-                <!-- Add more receipts here -->
             </tbody>
         </table>
     </main>
